test/data/semantic-errors/type-mismatch-cons.ava
var x = true::1::2::3::[];